[tool.poetry]
name = "gym-xarm"
version = "0.1.1"
description = "A gym environment for xArm"
authors = [
    "Rémi Cadène <re.cadene@gmail.com>",
    "Quentin Gallouédec <quentin.gallouedec@ec-lyon.fr>",
    "Alexander Soare <alexander.soare159@gmail.com>",
    "Simon Alibert <alibert.sim@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["robotics", "deep", "reinforcement", "learning", "xarm", "environment", "gym", "gymnasium", "mujoco"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
packages = [{include = "gym_xarm"}]


[tool.poetry.dependencies]
python = "^3.10"
mujoco = "^2.3.7"
gymnasium = ">=0.29.1"
gymnasium-robotics = ">=1.2.4"
pre-commit = {version = ">=3.7.0", optional = true}
debugpy = {version = ">=1.8.1", optional = true}
pytest = {version = ">=8.1.0", optional = true}
pytest-cov = {version = ">=5.0.0", optional = true}


[tool.poetry.extras]
dev = ["pre-commit", "debugpy"]
test = ["pytest", "pytest-cov"]


[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
